--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -48,3 +48,15 @@ h1 {
     
 }
 
+.container {
+    max-width: 700px;
+    height: 700px;
+    margin: auto;
+    padding: 0 1rem;
+    position: relative;
+    top: 10%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
