added more styles to the index.css file for better layout

--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -60,3 +60,19 @@ h1 {
     flex-direction: column;
 }
 
+.App .top {
+
+    width: 100%;
+    margin: 1rem auto;
+}
+
+.App .description {
+    position: relative;
+    right: -90%;
+    transform-origin: 0 0;
+    transform: rotate(269deg);
+}
+
+.App .bottom {
+    
+    
