--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -74,5 +74,18 @@ h1 {
 }
 
 .App .bottom {
-    
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    margin: 1rem auto;
+    width: 100%;
+    padding: 1rem;
+    border-radius: 12px;
+    background-color: rgba(255,255,255, 0.5);
+}
+
+.bold {
+    font-weight: 700;
+}
+
     
