--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:')
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
 
 * {
     border-box: box-sizing;
