upgrade the interface

--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -2,7 +2,7 @@
 
 
 * {
-    border-box: box-sizing;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }    
@@ -16,11 +16,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 
 p {
     font-size: 1.6rem;
@@ -30,7 +25,7 @@ h1 {
     font-size: 6rem;
 }
 
-.App {
+.app {
     width: 100%;
     height: 100vh;
     position: relative;
@@ -38,15 +33,15 @@ h1 {
     color: #fff;
 }
 
-.App:before {
+.app:before {
     content: '';
-    background: url("./assests/sunset.jpg") no-repeat center center/cover;
+    background: url("./assets/sunrise1.jpeg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     z-index: -1;
-    
 }
 
 .container {
