--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -16,6 +16,23 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.app .search{
+    text-align: center;
+    padding: 1rem;
+}
+
+.app input{
+    padding: .7rem 1.5rem;
+    font-size: 1.2rem;
+    border-radius: 25px;
+    border: 1px solid rgba(255,255,255, 0.8);
+    background: rgba(255,255,255, 0.1);
+    color: #F8F8F8;
+}
+
+::placeholder{
+    color: #F8F8F8;
+}
 
 p {
     font-size: 1.6rem;
@@ -46,7 +63,7 @@ h1 {
 
 .container {
     max-width: 700px;
-    height: 500px;
+    height: 400px;
     margin: auto;
     padding: 0 1rem;
     position: relative;
